--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@zeit/next-sass": "^1.0.1",
-    "next": "latest",
+    "next": "^10.1.3",
     "node-sass": "^4.14.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
