--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "next": "^10.1.3",
     "node-sass": "^4.14.1",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "react-hook-form": "^7.3.5"
   },
   "devDependencies": {
     "@types/node": "^12.12.21",
